[package]
name = "dca"
version = "0.1.0"
authors = ["Nicholas Stafie <nicholasstafie@gmail.com>"]

[features]
default = ["ffmpeg-sys/static",
           "ffmpeg-sys/default",
           "ffmpeg-sys/build-lib-openssl",
           "ffmpeg-sys/build-lib-opus",
           "ffmpeg-sys/build-pic"]

[dependencies]
opus = { path = "lib/opus-rs" }
serde = "0.7.0"
serde_json = "0.7.0"
ffmpeg-sys = { path = "lib/rust-ffmpeg-sys" }
libc = "0.2.8"